# cc-sentinel

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUDIT-PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  install.sh  pyproject.toml  requirements-test.txt
.claude/: LATER.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  test.yml
cc_retrospect/: __init__.py  analyzers.py  cache.py  commands.py  config.py  core.py  dashboard.py  dashboard_server.py  dashboard_template.html  dashboard_template.py  exceptions.py  hooks.py  learn.py  models.py  parsers.py  session_control.py  utils.py
cc_sentinel/: core.py
commands/: all.md  chains.md  compare.md  config.md  cost.md  digest.md  exclude.md  export.md  habits.md  health.md  hints.md  learn.md  model.md  report.md  reset.md  savings.md  status.md  tips.md  trends.md  waste.md
demo-assets/: reddit-post.md
docs/: architecture.md  troubleshooting.md
graphify-out/: GRAPH_REPORT.md  graph.json
hooks/: hooks.json
scripts/: default_config.env  dispatch.py
skills/analyze/: SKILL.md
skills/budget/: SKILL.md
skills/cc-retrospect/: SKILL.md
skills/cleanup/: SKILL.md
skills/diff/: SKILL.md
skills/digest/: SKILL.md
skills/fix/: SKILL.md
skills/health/: SKILL.md
skills/learn/: SKILL.md
skills/model/: SKILL.md
skills/optimize-later/: SKILL.md
skills/profile/: SKILL.md
skills/savings/: SKILL.md
skills/waste/: SKILL.md
tests/: test_core_detectors.py  test_core_parsing.py  test_core_session.py  test_full_coverage.py  test_integration.py  test_new_features.py  test_proactive.py
tests/fixtures/: bash_chain_session.jsonl  high_cost_session.jsonl
