[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-retrospect"
version = "2.5.0"
description = "Token usage tracker and waste detector for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Srinivas Vaddi" }]
keywords = ["claude", "claude-code", "token", "cost", "analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["ruff>=0.2.0", "pyright>=1.1.0", "pre-commit>=3.0"]

[project.urls]
Homepage = "https://github.com/vaddisrinivas/cc-retrospect"
Repository = "https://github.com/vaddisrinivas/cc-retrospect"
Documentation = "https://github.com/vaddisrinivas/cc-retrospect/tree/main/docs"
Issues = "https://github.com/vaddisrinivas/cc-retrospect/issues"

[tool.hatch.build.targets.wheel]
packages = ["cc_retrospect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 200

[tool.ruff.lint]
ignore = ["E701", "E702", "E741", "E402"]

[tool.coverage.run]
source = ["cc_retrospect"]
omit = ["tests/*", "scripts/*"]
